# instagram-disclosure-trends

./: .gitignore  README.md  pyproject.toml
data/: example_dataset_accounts.csv
notebooks/: paper_experiments.ipynb
scripts/: collect_data.py
src/: data_collection.py  data_processing.py  utils.py
